# rust_schedule

./: Cargo.toml  README.md  cli.yml
src/: instance.rs  lib.rs  main.rs  main.rs.1  schedule.rs
