[package]
name = "rust_schedule"
version = "0.1.0"
authors = ["fengbin <27317142@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
async-std = "1"
clap = "3.0.0-beta.1"

